--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
     plan: free
     autoDeploy: true
     buildCommand: npm ci && npx prisma generate && npm run build
-    startCommand: npx prisma db push && npm run db:seed && npm run start
+    startCommand: export DATABASE_URL=${DATABASE_URL:-file:/tmp/powercouple.db} && if [ "$DATABASE_URL" = "file:./prisma/dev.db" ]; then export DATABASE_URL=file:/tmp/powercouple.db; fi && npx prisma db push && npm run db:seed && npm run start
     envVars:
       - key: NODE_VERSION
         value: 20
